# WinSleuth

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
docs/: USER_GUIDE.md  WHITE_PAPER.md
scripts/: build.ps1
src/: main.rs
src/modules/: mod.rs
src/modules/analysis/: correlation_engine.rs  mod.rs  rules.rs
src/modules/core/: engine.rs  mod.rs  models.rs  traits.rs
src/modules/providers/: change_tracker.rs  device_inspector.rs  driver_inventory.rs  eventlog_reader.rs  firmware_inventory.rs  minidump_reader.rs  mod.rs  reliability_reader.rs  service_inspector.rs  system_inventory.rs
src/modules/ui_layer/: cli.rs  mod.rs  reporting.rs  ui.rs
