[package]
name = "winsleuth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI and Reporting
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
indicatif = "0.17"

# Logging and Diagnostics
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows-specific dependencies
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Wmi",
    "Win32_System_SystemInformation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Services",
    "Win32_System_EventLog",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_Devices_Properties",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography"
] }
sysinfo = "0.38.4" # For hardware monitoring and system-wide info
wmi = "0.18.4"
winreg = "0.56.0"
notify-rust = "4.14.0"
eframe = "0.34.1"
tray-icon = "0.22.0"
ureq = "3.3.0"
notify = "8.2.0"
winapi = { version = "0.3.9", features = ["wintrust", "wincrypt", "softpub"] }
sha2 = "0.11.0"
hex = "0.4.3"

[dev-dependencies]
